@@ -1,3 +1,6 @@
+2023-03-26  Markus Gans  <guru.mail@muenster.de>
+	* Visual highlighting of the selected text in FTextView
+
 2023-03-25  Markus Gans  <guru.mail@muenster.de>
 	* FTextView gets the ability to select text between a start and 
 	  end position
